--- a/fcap/templates/base.html
+++ b/fcap/templates/base.html
@@ -36,7 +36,8 @@
   <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href="#">Sign out</a>
+      <span>Hello {{request.user}}</span>
+      <a class="nav-link px-3" href="{% url 'logout' %}">Sign out</a>
     </div>
   </div>
 </header>
