--- a/fcap/templates/user/register.html
+++ b/fcap/templates/user/register.html
@@ -76,12 +76,13 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
-					<form method="POST" action="">
+					<form method="POST" action="{% url 'register' %}" enctype="multipart/form-data">
+                        {% csrf_token %}
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input required type="text" name="name">
+							<input required type="text" name="name" id="name" class="form-control" placeholder="Name">
                             
 						</div>
                         <div class="name_feedback text-danger font-weight-bold" style="display:none"></div>
@@ -89,33 +90,45 @@
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input required type="text" name="username">
-                            
+							<input required type="text" name="username" id="username" class="form-control" placeholder="Username">
 						</div>
                         <div class="username_feedback text-danger font-weight-bold" style="display:none"></div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
 							</div>
-							<input required type="email" name="email">
+							<input required type="email" name="email" id="email" class="form-control" placeholder="FAST NU Email Address">
+						</div>
+                        <div class="phone_feedback text-danger font-weight-bold" style="display:none"></div>
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+							</div>
+							<input required type="text" name="phone" id="phone" class="form-control" placeholder="Phone Number">
 						</div>
                         <div class="email_feedback text-danger font-weight-bold" style="display:none"></div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-							<input required type="password" name="password1">
+							<input required type="password" id="password1" name="password1" class="form-control" placeholder="Password">
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-							<input required type="password" name="password2">
+							<input required type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password">
 						</div>
                         <div class="confirmPassword_feedback text-danger font-weight-bold" style="display:none"></div>
 
+                        <div class="input-group mb-2">
+							<div class="input-group-append">
+							</div>
+                            <label for="profile_picture" class="form-control btn btn-secondary ml-4">Upload Profile Picture (Optional)</label>
+							<input id="profile_picture" type="file" class="form-control" style="display:none" name="profile_pic">
+						</div>
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn btn-primary" type="submit" disabled value="Register Account">
+				 			<input class="btn btn-primary" id="submit_button" type="submit" disabled value="Register Account">
 				   		</div>
 					</form>
 				</div>
@@ -128,21 +141,7 @@
 			</div>
 		</div>
 	</div>
-	<script>
-						
-		//Query All input fields
-		var form_fields = document.getElementsByTagName('input')
-        form_fields[0].placeholder='Name..';
-		form_fields[1].placeholder='Username..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter password...';
-		form_fields[4].placeholder='Re-enter Password...';
 
-
-		for (var field in form_fields){	
-			form_fields[field].className += ' form-control'
-		}
-	</script>
 
     <script src = {% static 'js/fcap_user/register.js' %}></script>
 </body>
