--- a/fcap/fcap/static/css/main.css
+++ b/fcap/fcap/static/css/main.css
@@ -50,3 +50,10 @@
   }
 
   
+  .nav_user {
+    font-size: 18px; 
+    color: #fff;
+    margin-right: 5px;
+  }
+
+  .img-profile{height:2rem;width:2rem}
