--- a/fcap/templates/base.html
+++ b/fcap/templates/base.html
@@ -33,13 +33,15 @@
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
-      <span>Hello {{request.user}}</span>
-      <a class="nav-link px-3" href="{% url 'logout' %}">Sign out</a>
+      
     </div>
+    
   </div>
+  <img class="img-profile rounded-circle" src="{{request.user.account.profile_pic.url}}">
+    <span class = "nav_user">Hello {{request.user.account.name}} </span>
+    <span><a class="nav-link px-3 nav_user" href="{% url 'logout' %}">Sign out</a></span>
 </header>
 
 <div class="container-fluid">
@@ -56,6 +58,7 @@
 
 
     <script src="{% static 'js/main.js' %}" ></script>
+    
 
   </body>
 </html>
