--- a/fcap/templates/matches/add_match.html
+++ b/fcap/templates/matches/add_match.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-
+{% load static %}
 
 
 {% block content %}
@@ -8,7 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{% url 'index' %}">Dashboard</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Matches</li>
+        <li class="breadcrumb-item active" aria-current="page">Add Match</li>
         </ol>
     </nav>
 
@@ -18,8 +18,8 @@
             <div class="card-header"></div>
 
             <div class="card-body">
-            <form action="{% url 'add_match' %}" method="post">
-                {% include 'partials/_messages.html' %}
+            {% include 'partials/_messages.html' %}
+            <form action="{% url 'add_match' %}" method="post" id = "add_match_form">
                 {% csrf_token %}
                 {% comment %} <div class="form-group">
                     <label for="">Player</label>
@@ -32,20 +32,18 @@
                         
                     </select>
                 </div> {% endcomment %}
-                <div class="form-group">
-                    <label for="">Amount</label>
-                    <input type="number" class="form-control form-control-sm" name="amount" value="{{values.amount}}"/>
+                <div class="form-group mb-3">
+                    <label for="">Number of Players</label>
+                    <input type="number" class="form-control form-control-sm" name="players" id = "players" value=""/>
                 </div>
-                <div class="form-group">
-                    <label for="">Description</label>
-                    <input type="text" class="form-control-sm form-control" name="description" value="{{values.description}}"/>
+                <div class="form-group mb-3">
+                    <label for="">Date and Time of Match</label>
+                    <input type="datetime-local" class="form-control form-control-sm" name="date" id = "date" value=""/>
                 </div>
-                
-                <div class="form-group">
-                    <label for="">Date</label>
-                    <input type="date" class="form-control-sm form-control" name="date" value="{{values.date}}"/>
+                <div id = "add_match_forms" class = "mt-3">
+                    
                 </div>
-                <input type="submit" value="Submit" class="btn btn-primary btn-primary-sm"/>
+                <input type="submit" value="Submit" id = "submit_button" class="btn btn-primary btn-primary-sm"/>
             </form>
 
                 
@@ -53,4 +51,9 @@
 
     </div>
 </div>
+<script>var players_data = {{ accounts|safe }};
+
+</script>
+<script src = {% static 'js/matches/add_match.js' %}></script>
+
 {% endblock  %}
