--- a/fcap/templates/partials/_sidebar.html
+++ b/fcap/templates/partials/_sidebar.html
@@ -2,7 +2,7 @@
 
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
     <div class="position-sticky pt-3 sidebar-sticky">
-      <ul class="nav flex-column">
+      {% comment %} <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">
             <span data-feather="home" class="align-text-bottom"></span>
@@ -39,39 +39,30 @@
             Integrations
           </a>
         </li>
-      </ul>
+      </ul> {% endcomment %}
 
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-        <span>Saved reports</span>
+        <span>Admin Operations</span>
         <a class="link-secondary" href="#" aria-label="Add a new report">
           <span data-feather="plus-circle" class="align-text-bottom"></span>
         </a>
       </h6>
       <ul class="nav flex-column mb-2">
+        {% url 'index' as dashboard_url %}
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link {% if request.path == dashboard_url %}active{% endif %}" href="{{dashboard_url}}">
             <span data-feather="file-text" class="align-text-bottom"></span>
-            Current month
+            Matches
           </a>
         </li>
+        {% url 'rankings' as rankings_url %}
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link {% if request.path == rankings_url %}active{% endif %}" href="{{rankings_url}}">
             <span data-feather="file-text" class="align-text-bottom"></span>
-            Last quarter
+            Player Rankings
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Social engagement
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Year-end sale
-          </a>
-        </li>
+        
       </ul>
     </div>
   </nav>
