--- a/fcap/templates/matches/rankings.html
+++ b/fcap/templates/matches/rankings.html
@@ -20,8 +20,8 @@
                     <th>Rank</th>
                     <th>Player Name</th>
                     <th>Matches</th>
-                    {% comment %} <th>Total Points</th>
-                    <th>Matches Won</th> {% endcomment %}
+                    <th>Total Points</th>
+                    <th>Matches Won</th>
                     <th>Ratings</th>
                 </tr>
             </thead>
@@ -39,8 +39,8 @@
                         <td>{{forloop.counter}}</td>
                         <td><img class="img-profile rounded-circle" src="{{player.profile_pic.url}}">        {{player.name}}</td>
                         <td>{{player.matches}}</td>
-                        {% comment %} <td>{{player.total_points}}</td>
-                        <td>{{player.matches_won}}</td> {% endcomment %}
+                        <td>{{player.total_points}}</td>
+                        <td>{{player.matches_won}}</td>
                         <td>{{player.ratings}}</td>
                         </tr>
                     
