--- a/fcap/templates/partials/_sidebar.html
+++ b/fcap/templates/partials/_sidebar.html
@@ -41,7 +41,7 @@
         </li>
       </ul> {% endcomment %}
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-        <span>Admin Operations</span>
+        <span>User Operations</span>
         <a class="link-secondary" href="#" aria-label="Add a new report">
           <span data-feather="plus-circle" class="align-text-bottom"></span>
         </a>
@@ -59,6 +59,14 @@
           <a class="nav-link {% if request.path == rankings_url %}active{% endif %}" href="{{rankings_url}}">
             <span data-feather="file-text" class="align-text-bottom"></span>
             Player Rankings
+          </a>
+        </li>
+
+        {% url 'challenges' as challenges_url %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == challenges_url %}active{% endif %}" href="{{challenges_url}}">
+            <span data-feather="file-text" class="align-text-bottom"></span>
+            Your Challenges
           </a>
         </li>
         
