--- a/fcap/templates/matches/challenge.html
+++ b/fcap/templates/matches/challenge.html
@@ -21,6 +21,18 @@
     <div id = "challenges_list" class = "mt-3">
         {% include 'partials/_messages.html' %}
 
+        {% if challenge.status == 'accepted' %}
+        <div class="card bg-dark m-5">
+            <div class="card-body text-white">
+                <p>All Challengers have accepted the Challenge!</p>
+                <p>Please make the Payment of Rs.  {% widthratio challengers|length 1 50 %} /= to the following account to Schedule your Challenge</p>
+                <p>Name: Samman Nasir</p>
+                <p>Account: Easypaisa / JazzCash</p>
+                <p>Account No# 03331234567</p>
+                <p>After the payment, send the screenshot to the given number to confirm your match! </p>
+            </div>
+        </div>{% endif %}
+
         <div class="row">
             <div class="col-md-1">
 
