--- a/fcap/templates/user/register.html
+++ b/fcap/templates/user/register.html
@@ -99,7 +99,7 @@
 								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
 							</div>
 							<input required type="email" name="email" pattern="[f][0-9]{6}@cfd\.nu\.edu\.pk" id="email" class="form-control" placeholder="FAST NU Email Address"
-							oninvalid="this.setCustomValidity('Please Enter your NU Email Addres (e.g. f180128@nu.edu.pk')" oninput="this.setCustomValidity('')">
+							oninvalid="this.setCustomValidity('Please Enter your NU Email Addres (e.g. f180128@cfd.nu.edu.pk')" oninput="this.setCustomValidity('')">
 						</div>
                         <div class="email_feedback text-danger font-weight-bold" style="display:none"></div>
 						<div class="input-group mb-2">
